<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <TextView
        android:id="@+id/add_youtube"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"/>

    <EditText
        android:id="@+id/video_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/video_name"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginRight="15sp"
        android:layout_marginLeft="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_youtube"
        app:layout_constraintVertical_bias="0.1"/>

    <EditText
        android:id="@+id/video_creator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/video_creator"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginRight="15sp"
        android:layout_marginLeft="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video_title"
        app:layout_constraintVertical_bias="0.05"/>

    <EditText
        android:id="@+id/video_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/video_url"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginRight="15sp"
        android:layout_marginLeft="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video_creator"
        app:layout_constraintVertical_bias="0.05"/>

    <Spinner
        android:id="@+id/video_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/video_categories"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginRight="15sp"
        android:layout_marginLeft="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video_url"
        app:layout_constraintVertical_bias="0.05"/>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textColor="@color/white"
        android:backgroundTint="@color/green"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video_category"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHorizontal_bias="0.2"/>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video_category"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHorizontal_bias="0.8"/>


</androidx.constraintlayout.widget.ConstraintLayout>